--- a/keras-sign/pranav.ipynb
+++ b/keras-sign/pranav.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -172,9 +172,10 @@
      "output_type": "stream",
      "text": [
       "Train on 27455 samples, validate on 7172 samples\n",
-      "Epoch 1/1\n",
-      "27455/27455 [==============================] - 7s 272us/step - loss: 2.9975e-06 - acc: 1.0000 - val_loss: 0.2775 - val_acc: 0.9515\n",
-      "1440/7172 [=====>........................] - ETA: 0s"
+      "Epoch 1/10\n",
+      "27455/27455 [==============================] - 8s 276us/step - loss: 1.0559e-05 - acc: 1.0000 - val_loss: 0.2203 - val_acc: 0.9587\n",
+      "Epoch 2/10\n",
+      "  672/27455 [..............................] - ETA: 6s - loss: 7.4685e-06 - acc: 1.0000"
      ]
     },
     {
@@ -189,66 +190,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7172/7172 [==============================] - 1s 105us/step\n",
-      "0 Test accuracy: 0.9514779698828778\n",
-      "Train on 27455 samples, validate on 7172 samples\n",
-      "Epoch 1/1\n",
-      "27455/27455 [==============================] - 8s 281us/step - loss: 2.7224e-06 - acc: 1.0000 - val_loss: 0.2768 - val_acc: 0.9525\n",
-      "7172/7172 [==============================] - 1s 110us/step\n",
-      "1 Test accuracy: 0.9524539877300614\n",
-      "Train on 27455 samples, validate on 7172 samples\n",
-      "Epoch 1/1\n",
-      "27455/27455 [==============================] - 8s 290us/step - loss: 2.6239e-06 - acc: 1.0000 - val_loss: 0.2786 - val_acc: 0.9498\n",
-      "7172/7172 [==============================] - 1s 123us/step\n",
-      "2 Test accuracy: 0.9498047964305633\n",
-      "Train on 27455 samples, validate on 7172 samples\n",
-      "Epoch 1/1\n",
-      "27455/27455 [==============================] - 8s 293us/step - loss: 2.5848e-06 - acc: 1.0000 - val_loss: 0.2788 - val_acc: 0.9497\n",
-      "7172/7172 [==============================] - 1s 118us/step\n",
-      "3 Test accuracy: 0.949665365309537\n",
-      "Train on 27455 samples, validate on 7172 samples\n",
-      "Epoch 1/1\n",
-      "27455/27455 [==============================] - 9s 315us/step - loss: 2.5290e-06 - acc: 1.0000 - val_loss: 0.2839 - val_acc: 0.9502\n",
-      "7172/7172 [==============================] - 1s 130us/step\n",
-      "4 Test accuracy: 0.9502230897936419\n",
-      "Train on 27455 samples, validate on 7172 samples\n",
-      "Epoch 1/1\n",
-      "27455/27455 [==============================] - 8s 307us/step - loss: 2.5045e-06 - acc: 1.0000 - val_loss: 0.2917 - val_acc: 0.9508\n",
-      "7172/7172 [==============================] - 1s 119us/step\n",
-      "5 Test accuracy: 0.9507808142777467\n",
-      "Train on 27455 samples, validate on 7172 samples\n",
-      "Epoch 1/1\n",
-      "27455/27455 [==============================] - 8s 295us/step - loss: 0.0440 - acc: 0.9882 - val_loss: 0.1982 - val_acc: 0.9526\n",
-      "7172/7172 [==============================] - 1s 116us/step\n",
-      "6 Test accuracy: 0.9525934188510876\n",
-      "Train on 27455 samples, validate on 7172 samples\n",
-      "Epoch 1/1\n",
-      "27455/27455 [==============================] - 8s 297us/step - loss: 8.8834e-05 - acc: 1.0000 - val_loss: 0.2013 - val_acc: 0.9582\n",
-      "7172/7172 [==============================] - 1s 123us/step\n",
-      "7 Test accuracy: 0.9581706636921361\n",
-      "Train on 27455 samples, validate on 7172 samples\n",
-      "Epoch 1/1\n",
-      "27455/27455 [==============================] - 8s 289us/step - loss: 3.3906e-05 - acc: 1.0000 - val_loss: 0.2094 - val_acc: 0.9587\n",
-      "7172/7172 [==============================] - 1s 98us/step\n",
-      "8 Test accuracy: 0.958728388176241\n",
-      "Train on 27455 samples, validate on 7172 samples\n",
-      "Epoch 1/1\n",
-      "27455/27455 [==============================] - 8s 281us/step - loss: 1.7698e-05 - acc: 1.0000 - val_loss: 0.2148 - val_acc: 0.9590\n",
-      "7172/7172 [==============================] - 1s 103us/step\n",
-      "9 Test accuracy: 0.9590072504182934\n"
+      "27455/27455 [==============================] - 8s 282us/step - loss: 6.9961e-06 - acc: 1.0000 - val_loss: 0.2294 - val_acc: 0.9601\n",
+      "Epoch 3/10\n",
+      "27455/27455 [==============================] - 8s 276us/step - loss: 5.0871e-06 - acc: 1.0000 - val_loss: 0.2300 - val_acc: 0.9575\n",
+      "Epoch 4/10\n",
+      "27455/27455 [==============================] - 8s 274us/step - loss: 4.0075e-06 - acc: 1.0000 - val_loss: 0.2330 - val_acc: 0.9571\n",
+      "Epoch 5/10\n",
+      "27455/27455 [==============================] - 8s 286us/step - loss: 3.3788e-06 - acc: 1.0000 - val_loss: 0.2373 - val_acc: 0.9578\n",
+      "Epoch 6/10\n",
+      "27455/27455 [==============================] - 8s 288us/step - loss: 3.0203e-06 - acc: 1.0000 - val_loss: 0.2394 - val_acc: 0.9619\n",
+      "Epoch 7/10\n",
+      "27455/27455 [==============================] - 8s 283us/step - loss: 2.7981e-06 - acc: 1.0000 - val_loss: 0.2412 - val_acc: 0.9601\n",
+      "Epoch 8/10\n",
+      "27455/27455 [==============================] - 8s 279us/step - loss: 2.6714e-06 - acc: 1.0000 - val_loss: 0.2497 - val_acc: 0.9619\n",
+      "Epoch 9/10\n",
+      "27455/27455 [==============================] - 7s 271us/step - loss: 2.5900e-06 - acc: 1.0000 - val_loss: 0.2564 - val_acc: 0.9594\n",
+      "Epoch 10/10\n",
+      "27264/27455 [============================>.] - ETA: 0s - loss: 2.5398e-06 - acc: 1.0000"
      ]
     }
    ],
    "source": [
-    "for i in range(10):\n",
-    "    model.fit(X_train, y_train,\n",
-    "          epochs=1,\n",
-    "          verbose=1,\n",
-    "          validation_data=(X_test, y_test),\n",
-    "          callbacks=[WandbCallback(data_type=\"image\", labels=signdata.letters)])\n",
-    "    test_loss, test_acc = model.evaluate(X_test, y_test)\n",
-    "\n",
-    "    print(i, 'Test accuracy:', test_acc)\n"
+    "model.fit(X_train, y_train,\n",
+    "      epochs=config.epochs,\n",
+    "      verbose=1,\n",
+    "      validation_data=(X_test, y_test),\n",
+    "      callbacks=[WandbCallback(data_type=\"image\", labels=signdata.letters)])"
    ]
   },
   {
